# Rag-with-RAGAS

./: README.md  data_ingestion.py  main.py  pyproject.toml  requirements.txt
