[project]
name = "rag-with-ragas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.17",
    "langchain-classic>=1.0.6",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-pinecone>=0.2.13",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
]
